Revision history for Data-Domain

0.05    
  - Bug fix : wrong message in List(-any)

0.04    07.03.2006
  - Fixed dependencies in Build.PL
  - Revisited code for List(-any) 

0.03    23.02.2006
  - Bug fix in method msgs()

0.02    27.12.2006
  - Documentation restructured and completed (esp. -messages option)
  - minor modifications in msg() method
  - added range options (e.g. -size=>[$min, $max])

0.01    01.10.2006
  - initial release
