@@ -11,7 +11,7 @@ sub magic_number_matches {
   open FH, '_build\\magicnum' or return 0;
   my $filenum = <FH>;
   close FH;
-  return $filenum == 681762;
+  return $filenum == 57861;
 }
 
 my $progname;
@@ -31,8 +31,7 @@ BEGIN {
   }
   unshift @INC,
     (
-     'C:\\Program Files\\XEmTeX\\perl\\lib',
-     'C:\\Program Files\\XEmTeX\\perl\\site\\lib'
+
     );
 }
 
