@@ -1,9 +1,9 @@
-Build.pl
+Build.PL
 Changes
 lib/Data/Domain.pm
 MANIFEST			This list of files
+META.yml
 README
 t/data-domain.t
 t/pod-coverage.t
 t/pod.t
-META.yml
