@@ -2,6 +2,7 @@ Revision history for Data-Domain
 
 0.05    
   - Bug fix : wrong message in List(-any)
+  - renamed build.pl in build.PL
 
 0.04    07.03.2006
   - Fixed dependencies in Build.PL
